--- a/Machine Learning/2019.04.02/20190402test1.ipynb
+++ b/Machine Learning/2019.04.02/20190402test1.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 <class 'int'>\n",
+      "1 2\n",
+      "test string <class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
-    "test = 1\n",
-    "print(test)\n",
+    "test = 1          # test 라는 변수를 선언해서 int 타입의 1로 초기화 시킴\n",
+    "print(test,type(test)) # 1 <class 'int'>\n",
     "a, b = 1,2\n",
     "print(a,b)\n",
     "test2 = \"test string\"\n",
-    "print(test2)"
+    "print(test2, type(test2)) # test string <class 'str'>"
    ]
   },
   {
