--- a/django/2019.06.04 - DB.md
+++ b/django/2019.06.04 - DB.md
@@ -26,15 +26,15 @@
 
 #### 4. 기본 용어
 
-> 1. 스키마(scheme):
+> 1. **스키마(scheme)**:
 >
 >    데이터베이스에서 자료의 구조, 표현방법, 관계등을 정의한 구조
 >
-> 2. 열(Column), 컬럼 : 테이블의 고유한 속성
+> 2. **열(Column), 컬럼** : 테이블의 고유한 속성
 >
-> 3. 행(Row), 레코드 : 테이블의 데이터는 행에 저장한다.
+> 3. **행(Row), 레코드** : 테이블의 데이터는 행에 저장한다.
 >
-> 4. 기본키(PK) : 각 행의 고유값으로 반드시 설정해야한다.
+> 4. **기본키(PK)** : 각 행의 고유값으로 반드시 설정해야한다.
 
 
 
@@ -50,5 +50,15 @@
 
 #### 7. OOP - Classes & Objects
 
-> class에 있는 함수를 Methods 라고 생각??
+> class에 있는 함수를 Methods
+>
+> ex)
+>
+> **Class** : 사람
+>
+> **Attributes** : 이름, 신장, 체중
+>
+> **Methods** : 식사하기, 운동하기, 말하기
+>
+> ↓
 
