--- a/django/2019.06.10 - practice crud.md
+++ b/django/2019.06.10 - practice crud.md
@@ -162,22 +162,71 @@
 
 ### crud_review project 생성
 
+> $ cd django
+>
 > $ django-admin startproject crud_review
 
 #### boards app 생성
 
-> cd crud_review/
+> $ cd crud_review/
 >
 > $ python manage.py startapp boards
 
+
+
 ##### 1.  settings.py에 app 등록
 
-> [crud_review] 의 [settings.py] 에 boards.app 등록
+> * [crud_review] 의 [settings.py] 에 boards.app 등록
 >
-> 시간 및 언어 설정
+> ![image](https://user-images.githubusercontent.com/48499094/59234544-3d81ad80-8c28-11e9-9bf0-c13434693486.png)
+>
+> * 시간 및 언어 설정
+>
+> ![image](https://user-images.githubusercontent.com/48499094/59234570-5ab67c00-8c28-11e9-8601-70fcb656e075.png)
 
-##### 2. boards app에 urls.py 생성
 
+
+##### 2. boards app에 urls.py와 templates 디렉토리 생성
+
+> ![image](https://user-images.githubusercontent.com/48499094/59234633-aec16080-8c28-11e9-9767-38fca79f9088.png)
+>
 > 
+>
+> ![image](https://user-images.githubusercontent.com/48499094/59234657-cb5d9880-8c28-11e9-99e8-1968c8321d71.png)
 
-##### 3. 
+
+
+##### 3.  [crud_review]에 urls.py 설정
+
+>![image](https://user-images.githubusercontent.com/48499094/59234769-3909c480-8c29-11e9-92e4-0d7dea41e52d.png)
+>
+>
+
+
+
+##### 4.  [boards] app에 있는 [models.py]에 class 정의
+
+>![image](https://user-images.githubusercontent.com/48499094/59234834-72dacb00-8c29-11e9-91f0-25ba2a14f353.png)
+>
+>
+
+
+
+##### 5.  Migration
+
+>$ python manage.py makemigration
+>
+>$ python manage.py migrate
+
+
+
+##### 6. 
+
+
+
+
+
+
+
+
+
