--- a/django/markdown/2019.06.21 -follow.md
+++ b/django/markdown/2019.06.21 -follow.md
@@ -177,7 +177,11 @@
 >
 >
 
-### 11. [myform] - [settings.py] 에 코드 추가
+
+
+## 소셜 로그인
+
+### 1. [myform] - [settings.py] 에 코드 추가
 
 >* 필요 라이브러리 설치
 >
@@ -189,48 +193,178 @@
 >
 >``` python
 >AUTHENTICATION_BACKENDS = (						# 추가 코드
->    'django.contrib.auth.backends.ModelBackend',
+>'django.contrib.auth.backends.ModelBackend',
 >)
 >
 >INSTALLED_APPS = [
->    'accounts',
->    'boards',
->    'django.contrib.admin',
->    'django.contrib.auth',
->    'django.contrib.contenttypes',
->    'django.contrib.sessions',
->    'django.contrib.messages',
->    'django.contrib.staticfiles',
+>'accounts',
+>'boards',
+>'django.contrib.admin',
+>'django.contrib.auth',
+>'django.contrib.contenttypes',
+>'django.contrib.sessions',
+>'django.contrib.messages',
+>'django.contrib.staticfiles',
 >
->    'django.contrib.sites',        			  # 추가 코드
->    'allauth',				      			 # 추가 코드
->    'allauth.account',		       			  # 추가 코드
->    'allauth.socialaccount',        		   # 추가 코드
->    'allauth.socialaccount.providers.kakao',    # 추가 코드
+>'django.contrib.sites',        			  # 추가 코드
+>'allauth',				      			 # 추가 코드
+>'allauth.account',		       			  # 추가 코드
+>'allauth.socialaccount',        		   # 추가 코드
+>'allauth.socialaccount.providers.kakao',    # 추가 코드
 >
->    'bootstrap4',
+>'bootstrap4',
 >]
+>
+>SITE_ID = 1     # 추가 코드
+>LOGIN_REDIRECT_URL = 'boards:index'  # 추가 코드
 >```
 >
 >
 
-### 12. [myform] - [urls.py] 에 추가
+### 2. [myform] - [urls.py] 에 추가
 
 >``` python
 >from django.contrib import admin
 >from django.urls import path, include
 >
 >urlpatterns = [
->    path('accounts/', include('accounts.urls')),
->    
->    ## 아래 코드를 추가함
->    path('accounts/', include('allauth.urls')),  # 반드시 path('accounts/', include('accounts.urls')), 아래에 와야한다.
->    
->    
->    path('boards/', include('boards.urls')),
->    path('admin/', admin.site.urls),
+>path('accounts/', include('accounts.urls')),
+>
+>## 아래 코드를 추가함
+>path('accounts/', include('allauth.urls')),  # 반드시 path('accounts/', include('accounts.urls')), 아래에 와야한다.
+>
+>
+>path('boards/', include('boards.urls')),
+>path('admin/', admin.site.urls),
 >]
 >```
 >
 >* migrate 하기
+>
+>``` python shell
+>$ python manage.py migrate
+>```
+
+### 3. 카카오 개발자 센터 로그인 및 설정
+
+>1. 앱 만들기 클릭
+>
+>![image](https://user-images.githubusercontent.com/48499094/59901200-76dec800-9435-11e9-83a5-1d7ff405f730.png)
+>
+>2. 앱 이름과 회사명 작성
+>
+>![image](https://user-images.githubusercontent.com/48499094/59901256-9c6bd180-9435-11e9-91f5-6a03cf749e49.png)
+>
+>3. '키키'  라는 앱으로 생성
+>
+>![image](https://user-images.githubusercontent.com/48499094/59901403-17cd8300-9436-11e9-8ae9-6315e3050df7.png)
+>
+>4. 설정 - 일반을 클릭한 후 플랫폼 추가 클릭
+>
+>![image](https://user-images.githubusercontent.com/48499094/59901498-5f540f00-9436-11e9-812a-36e5c06257c5.png)
+>
+>5. 웹으로 선택 후 아래의 로컬 주소 2개를 입력한 후 추가 버튼을 누른다.
+>
+>![image](https://user-images.githubusercontent.com/48499094/59901607-bfe34c00-9436-11e9-9ab2-efbe85568dc2.png)
+>
+>6. 아래의 경로를 설정하고 저장 버튼을 누른다.
+>
+>![image](https://user-images.githubusercontent.com/48499094/59901692-0042ca00-9437-11e9-945b-01e788cd9cdd.png)
+>
+>7. 설정 - 사용자 관리 클릭 후 아래와 같이 세팅 한 후 하단에 있는 저장을 클릭
+>
+>![image](https://user-images.githubusercontent.com/48499094/59901806-5dd71680-9437-11e9-95a3-49bbdc72c576.png)
+>
+>8. 설정 - 고급을 누르고 아래와 같이 설정
+>
+>![image](https://user-images.githubusercontent.com/48499094/59901909-b0183780-9437-11e9-9295-58484a555568.png)
+>
+>9. 장고 서버를 실행하고 admin 페이지에 접속 하여 아래의 소셜 어플리케이션 추가를 누른다.
+>
+>![image](https://user-images.githubusercontent.com/48499094/59902151-63812c00-9438-11e9-8cac-e578e013e94e.png)
+>
+>10. 아래와 같이 설정
+>
+>![image](https://user-images.githubusercontent.com/48499094/59902376-05087d80-9439-11e9-9506-27ef13a724e3.png)
+
+### 4.  HTML 파일 변경 및 생성
+
+>* [accounts] - [auth_form.html] 을 수정  (로그인 부분만 삭제함)
+>
+>``` html
+>{% extends 'boards/base.html' %}
+>{% load bootstrap4 %}
+>
+>{% block body %}
+>{% if request.resolver_match.url_name == 'signup' %}
+>    <h1>회원 가입</h1>
+>
+>{% elif request.resolver_match.url_name == 'edit' %}
+>    <h1>회원정보 수정</h1>
+>{% else %}
+>    <h1>비밀번호 변경</h1>
+>{% endif %}
+>
+><form action="" method="post">
+>    {% csrf_token %}
+>    {% bootstrap_form form %}
+>
+>    {% buttons %}
+>        <button type="submit" class="btn btn-primary">Submit</button>
+>    {% endbuttons %}
+></form>
+>
+>{% endblock%}
+>```
+>
+>
+>
+>* [accounts] - [login.html] 생성
+>
+>``` html
+>{% extends 'boards/base.html' %}
+>{% load bootstrap4 %}
+>{% load socialaccount %}
+>
+>{% block body %}
+>
+>    <h1>로그인</h1>
+>
+>
+><form action="" method="post">
+>    {% csrf_token %}
+>    {% bootstrap_form form %}
+>
+>    {% buttons %}
+>        <button type="submit" class="btn btn-primary">로그인</button>
+>    {% endbuttons %}
+></form>
+><a class="btn btn-warning" href="{% provider_login_url 'kakao' method='oauth2' %}">카카오 로그인</a>
+>
+>{% endblock %}
+>```
+
+### 5. [accounts] - [views.py] 수정
+
+>* 경로를 login.html로 변경
+>
+>``` python
+>~~~~
+>def login(request):
+>    if request.user.is_authenticated:             # 만약 로그인이 된 상태이면 바로 index 페이지로 보내버림
+>        return redirect('boards:index')
+>    if request.method == 'POST':
+>        form = AuthenticationForm(request, request.POST)
+>        if form.is_valid():
+>            auth_login(request, form.get_user())
+>            return redirect(request.GET.get('next') or 'boards:index')   # 190619
+>    else:
+>        form = AuthenticationForm()
+>    context ={'form': form}
+>    return render(request, 'accounts/login.html', context)    # 수정한 부분
+>
+>~~~~
+>```
+>
+>
 
