--- a/django/markdown/2019.06.21 -follow.md
+++ b/django/markdown/2019.06.21 -follow.md
@@ -120,7 +120,7 @@
 >    path('', views.index, name='index'),
 >	~~~~ 
 >    # 아래 경로를 추가
->    path('<int:board_pk/follow/<int:user_pk>/', views.follow, name='follow'),
+>    path('<int:board_pk>/follow/<int:user_pk>/', views.follow, name='follow'),
 >]
 >```
 >
