Update 2019.06.26 - Django App  웹 배포.md

--- a/django/markdown/2019.06.26 - Django App  웹 배포.md
+++ b/django/markdown/2019.06.26 - Django App  웹 배포.md
@@ -74,7 +74,7 @@
     $ touch Procfile 
     ```
 
-13. [Procfile.txt] - 코드 작성     (agora 위치ㅔ 프로젝트 이름 작성)
+13. [Procfile.txt] - 코드 작성     (agora 위치에 프로젝트 이름 작성)
 
     ``` txt
     web: gunicorn agora.wsgi
