--- a/django/markdown/2019.06.26 - Django App  웹 배포.md
+++ b/django/markdown/2019.06.26 - Django App  웹 배포.md
@@ -36,7 +36,7 @@
    $ touch .env
    ```
 
-7.  생성된 [.env] 에 'SECRET_KEY'와 'DEBUG' 전체를 넣는다. ![image](https://user-images.githubusercontent.com/48499094/60575732-092c8780-9db7-11e9-9235-478802157ce9.png)
+7.  생성된 [.env] 에 'SECRET_KEY'와 'DEBUG' 전체를 넣는다.  단 secret_key 의 ' ' 은 제거한다.![image](https://user-images.githubusercontent.com/48499094/60575732-092c8780-9db7-11e9-9235-478802157ce9.png)
 
 8. [settings.py] - decouple import
 
