--- a/Markdown/01. 기본 알고리즘.md
+++ b/Markdown/01. 기본 알고리즘.md
@@ -36,3 +36,20 @@
 >
 >예를 들어 static int max3 의 반환값은 int형 이고 static float max3의 반환값은 float 이다. 단 반환값의 자료형이 void인 메서드는 값을 반환하지 않는다.
 
+
+
+### 4. 연산자와 피연산자 24p
+
+>+, - 등의 여난 기호를 연산자(operator) 라고 부른다. 그리고 연산의 대상이 되는 것을 피연산자(operand)라고 부른다. 
+>
+>연산자는 피연산자의 수에 따라 3종류로 분류된다.
+>
+>1. 단항 연산자(unary operator)   피연산자 1개 ex) a++
+>2. 2항 연산자(binary operator)    피연산자 2개 ex) a < b
+>3. 3항 연산자(ternary operator)   피연산자 3개 ex) a ? b : c
+>
+>특히 조건 연산자(conditional operator) ? : 는 자바에서 유일한 3항 연산자이다.
+>
+>a ? b : c 는 a가 true이면 b를 반환하고 false 이면 c를 반환한다.
+>
+>
