--- a/단어 정리.md
+++ b/단어 정리.md
@@ -1,4 +1,4 @@
-# 추후 정리 필요한 마구잡이 단어 모음
+# IT_Help_U 만들며 모르는 것들 기록
 
 ## 해상도 구분
 
@@ -120,9 +120,20 @@ https://webdir.tistory.com/349
 
 react-redux는 스토어에 저장되어 있는 상태가 변경될 때(dispatch 될 때) 마다 매번 prop을 새로 전달해주는 연결 고리 역할을 한다.
 
+> #### [참고]
+>
+> - [Smooth97님의 velog](https://velog.io/@smooth97/-Redux-Presentational-Component-Container-Component)
+> - [React: Presentational VS Container Components](https://flaviocopes.com/react-presentational-vs-container-components/)
+>
+> 
 
 
 
+
+
+
+
+## 변수 선언
 
 - var  (scope가 함수 단위)
 
@@ -158,6 +169,12 @@ function foo() {
   - 동적인 데이터를 다룰 때 사용
 
 
+
+
+
+
+
+## 함수 VS 메소드
 
 ##### Function (함수)
 
@@ -233,6 +250,55 @@ class someClass{
 
 
 
+## 화살표 함수
+
+JSX 내부에서 조건부 렌더링을 할 때는 보통 삼항 연산자를 사용하거나, AND 연산자를 사용합니다.
+
+반면에 if 문을 사용 할 수는 없어요 (사용하려면 [IIFE](https://developer.mozilla.org/ko/docs/Glossary/IIFE)(즉시 실행 함수 표현) 을 사용해아합니다.)
+
+```javascript
+function() {
+	//expression
+}
+
+// 화살표 함수
+(param1, param2... paramN) => { return expression} 
+
+
+// 즉시 실행 함수
+(function(){
+    //expression;
+}());
+
+
+(() => {
+    //expression
+})()
+```
+
+>  [참고]
+>
+> * [누구든지 하는 리액트 3편: JSX](https://velopert.com/3626)
+>
+> * [화살표 함수의 장점은 무엇일까](https://hanjungv.github.io/2018-02-03-1_JS_arrow_function/)
+>
+> * [JavaScript 화살표 함수](https://velog.io/@ki_blank/JavaScript-화살표-함수Arrow-function)
+
+
+
+
+
+
+
+## React로 사고하기
+
+### 1단계 : UI를 컴포넌트 계층 구조로 나누기
+
+- 모든 컴포넌트의 주변에 박스를 그리고 그 각각에 이름을 붙이는 것
+
+> [참고]
+>
+> [리액트로 사고하기](https://ko.reactjs.org/docs/thinking-in-react.html)
 
 
 
@@ -244,8 +310,3 @@ class someClass{
 
 
 
-
-#### [참고]
-
-- [Smooth97님의 velog](https://velog.io/@smooth97/-Redux-Presentational-Component-Container-Component)
-- [React: Presentational VS Container Components](https://flaviocopes.com/react-presentational-vs-container-components/)
