기능: React sns 연습 틀 잡기

--- a/단어 정리.md
+++ b/단어 정리.md
@@ -290,6 +290,68 @@ function() {
 
 
 
+## 프레임워크 VS 라이브러리
+
+
+
+## SEO (Search Engine Optimization)
+
+
+
+## SPA
+
+
+
+## SSR(Server Side Rendering) VS CSR(Client Side Rendering)
+
+
+
+## JavaScript
+
+
+
+## React
+
+
+
+## React Hook
+
+
+
+## React Router
+
+
+
+## Redux
+
+
+
+## TypeScript
+
+
+
+## Node JS
+
+
+
+## Express JS
+
+
+
+## Mongo DB
+
+
+
+## Redux-Saga
+
+
+
+
+
+
+
+
+
 ## React로 사고하기
 
 ### 1단계 : UI를 컴포넌트 계층 구조로 나누기
