--- a/단어 정리.md
+++ b/단어 정리.md
@@ -78,7 +78,7 @@ https://webdir.tistory.com/349
 
 ## Component
 
-### Component(컴포넌트)
+### 1. Component(컴포넌트)
 
 - 컴포넌트에 대한 정의는 다양하다.
 - 그 이유는 컴포넌트가 재사용 단위라는 의미로 많이 사용되기 때문이다.
@@ -96,7 +96,7 @@ https://webdir.tistory.com/349
 
 
 
-### Presentational Component (= Dumb Component)
+### 2. Presentational Component (= Dumb Component)
 
 - 상태를 갖지 않으며 부모로부터 props를 통해 데이터를 전달 받아서 사용한다.
 - 오로지 **시각적인 부분**만 담당한다.
@@ -107,11 +107,11 @@ https://webdir.tistory.com/349
 
 
 
-### Container Component (= Smart Component)
+### 3. Container Component (= Smart Component)
 
 - 상태를 갖고 있으며, **비동기 작업(Async)**을 수행하면서 계속적으로 상태가 변경될 수 있다.
-  - **동기(Asynchronous)** 방식 : 순차적으로 일을 스스로 끝내 나가는 방식
-  - **비동기(Synchronous)** 방식 : 해야 할 일을 위임하고 기다리는 방식
+  - **동기(Synchronous)** 방식 : 순차적으로 일을 스스로 끝내 나가는 방식
+  - **비동기(Asynchronous)** 방식 : 해야 할 일을 위임하고 기다리는 방식
 - 리덕스와 연동된 컴포넌트
 - Redux의 상태가 변경될 때마다 Presentaional Component를 다시 렌더링하려면 Container Component로 포함해야 한다. 이렇게 함으로써 Redux에 액션이 dispatch되어 상태가 변경될 때마다 Container Component가 Presentational Component에 다른 prop을 전달할 수 있다.
 - connect() 함수를 통해 생성한다.
@@ -324,7 +324,9 @@ function() {
 
 ## Redux
 
-
+* dispatch
+* action
+* 
 
 ## TypeScript
 
@@ -342,7 +344,89 @@ function() {
 
 
 
+## Maria DB
+
+
+
 ## Redux-Saga
+
+
+
+## ORM (Object Relational Mapping)
+
+
+
+## WEBPACK
+
+* bundler
+* 
+
+## REACT BOILERPLATE
+
+
+
+## BABEL
+
+
+
+## RDMS
+
+
+
+## DataBase Connection Pool (DBCP)
+
+#### 1. 커넥션 풀이란?
+
+웹 컨테이너(WAS: Web Application Server)가 실행되면서 DB와 **미리 Connection(연결)을 해놓은 객체들을 Pool에 저장해두었다가 클라이언트 요청이 오면 Connection을 빌려주고, 처리가 끝나면 다시 Connection을 반납받아 Pool에 저장하는 방식**을 말한다.
+
+* DBCP : DB와 커넥션을 맺고 있는 객체를 관리하는 역할
+
+![커넥션 풀이란](https://user-images.githubusercontent.com/48499094/71799005-5d326480-3097-11ea-919e-b8414538170f.png)
+
+#### 2. 커넥션 풀을 사용하는 이유
+
+DB에 연결하기 위해 매번 커넥션 객체를 생성할 때는 많은 시스템 자원이 요구가 되기 때문에 사용한다.
+
+#### 3. 커넥션 풀 특징
+
+* 웹 컨테이너(WAS)가 실행되면서 커넥션 객체를 미리 Pool에 생성해 둔다.
+* HTTP 요청에 따라 Pool에서 커넥션 객체를 가져다 쓰고 반환한다.
+* Pool에 커넥션이 생성되어 있기 때문에 커넥션 생성하는데 드는 시간이 소비되지 않는다.
+* 커넥션을 재사용하기 때문에 커넥션 수를 제한적으로 설정한다.
+
+#### 4. 동시 접속자가 많을 경우
+
+미리 생성해 놓은 커넥션 객체를 제공하고 커넥션 객체가 없으면 사용자는 커넥션이 반환될 때까지 번호순대로 대기 상태가 된다.
+
+>[참고]
+>
+>* [커넥션 풀 이란?](https://linked2ev.github.io/spring/2019/08/14/Spring-3-커넥션-풀이란/)
+>
+>* [gusfree.tistory](https://gusfree.tistory.com/1003)
+
+
+
+
+
+## JavaScript CallBack
+
+
+
+### Promise
+
+* Callback 이 반복되는 단점을 보완하기 위하여 생긴 것
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
