문서: 내용 추가

--- a/단어 정리.md
+++ b/단어 정리.md
@@ -22,41 +22,35 @@
 
 
 
-
-
 ## CSS Position
 
-### static
+### 1. static
 
 일단 모든 태그들은 처음에 position: static 상태입니다. (기본적으로 static이라 따로 써주지 않아도 됩니다.) 차례대로 왼쪽에서 오른쪽, 위에서 아래로 쌓입니다.
 
-### relative
+### 2. relative
 
 여기서 태그의 위치를 살짝 변경하고 싶을 때 position: relative를 사용합니다. 이제 top(위), right(오른쪽), bottom(아래), left(왼쪽) 속성을 사용해 위치 조절이 가능합니다.
 
 각각의 태그가 기존 static이었을 때의 위치를 기준으로 top, right, bottom, left 방향으로 주어진 픽셀만큼 이동했습니다.
 
-### absolute
+### 3. absolute
 
 relative가 static인 상태를 기준으로 주어진 픽셀만큼 움직였다면, absolute는 **position: static 속성을 가지고 있지 않은 부모를 기준**으로 움직입니다. 만약 부모 중에 포지션이 relative, absolute, fixed인 태그가 없다면 가장 위의 태그(body)가 기준이 됩니다.
 
-### fixed
+### 4. fixed
 
 제 홈페이지를 보시면 상단 로그인 메뉴와 좌측 내비게이션 메뉴, 우측 명예의 전당, 그리고 하단 포스트 메뉴는 항상 특정 위치에 고정되어 있습니다. 스크롤을 내려도 그 자리에 계속 있죠. 바로 포지션이 fixed로 설정되어 있기 때문입니다.
 
+> [출처]
+>
+> * https://www.zerocho.com/category/CSS/post/5864f3b59f1dc000182d3ea1
 
 
 
-
-
-
-## display: flex
+## Display: flex
 
 블록 레이아웃, 인라인 레이아웃, 테이블 레이아웃 및 위치 지정 레이아웃 모드와 더불어 CSS3에서는 보다 복잡한 블록 타입 레이아웃 모드인 flexbox 레이아웃을 지원한다. flexbox의 콘텐츠는 어떤 방향에든 위치할 수 있으며, 동적으로 변경가능한 순서를 지정할 수도 있고, 가용한 공간 내에서 크기와 위치를 자동으로 조정하기도 한다.
-
-https://webdir.tistory.com/349
-
-
 
 **flex** [CSS](https://developer.mozilla.org/ko/docs/CSS) 속성은 하나의 플렉스 아이템이 자신의 컨테이너가 차지하는 공간에 맞추기 위해 크기를 키우거나 줄이는 방법을 설정하는 속성입니다. `flex`는 [`flex-grow`](https://developer.mozilla.org/ko/docs/Web/CSS/flex-grow), [`flex-shrink`](https://developer.mozilla.org/ko/docs/Web/CSS/flex-shrink), [`flex-basis`](https://developer.mozilla.org/ko/docs/Web/CSS/flex-basis)의 [단축 속성](https://developer.mozilla.org/ko/docs/Web/CSS/Shorthand_properties)입니다.
 
@@ -70,118 +64,25 @@ https://webdir.tistory.com/349
 
 **flex-grow** [CSS](https://developer.mozilla.org/en-US/docs/Web/CSS) property 는 `flex-item` 요소가, `flex-container` 요소 내부에서 할당 가능한 공간의 정도를 선언합니다. 만약 **형제 요소**로 렌더링 된 모든 `flex-item` 요소들이 동일한 `flex-grow` 값을 갖는다면, `flex-container` 내부에서 동일한 공간을 할당받습니다. 하지만 `flex-grow` 값으로 다른 소수값을 지정한다면, 그에 따라 다른 공간값을 나누어 할당받게 됩니다.
 
-- 참고 [flex mdn](https://developer.mozilla.org/ko/docs/Web/CSS/flex)
-
-
-
-
-
-## Component
-
-### 1. Component(컴포넌트)
-
-- 컴포넌트에 대한 정의는 다양하다.
-- 그 이유는 컴포넌트가 재사용 단위라는 의미로 많이 사용되기 때문이다.
-- 재사용이라는 측면을 넓은 의미로 보면 소프트웨서 개발에 있어서 재사용되는 모든 단위들을 컴포넌트라고 보는 것
-  - 재사용되는 문서
-  - 재사용 모델
-  - 재사용 테이블
-  - 재사용 코드
-  - 재사용 라이브러리 등
-- 컴포넌트의 특징
-  - 1. 컴포넌트는 독립적인 소프트웨어 모듈
-    2. 컴포넌트는 구현, 명세화, 패키지화 그리고 배포될 수 있어야 한다
-    3. 하나의 컴포넌트는 하나 이상의 클래스들로 구성될 수 있다.
-    4. 컴포넌트는 인터페이스를 통해서만 접근할 수 있다.
-
-
-
-### 2. Presentational Component (= Dumb Component)
-
-- 상태를 갖지 않으며 부모로부터 props를 통해 데이터를 전달 받아서 사용한다.
-- 오로지 **시각적인 부분**만 담당한다.
-- 이벤트 핸들러를 등록하는 정도의 기능을 갖추고 있다.
-- **Styled Components**는 모두 Presentaional Component 이다.
-- 데이터나 상태에 관해 알고 있는 것이 거의 없어 결합도가 낮기 때문에 재사용성이 높아진다.
-- 우리가 function, class 를 통해 정의하는 컴포넌트의 대부분은 Presentational Component이다.
-
-
-
-### 3. Container Component (= Smart Component)
-
-- 상태를 갖고 있으며, **비동기 작업(Async)**을 수행하면서 계속적으로 상태가 변경될 수 있다.
-  - **동기(Synchronous)** 방식 : 순차적으로 일을 스스로 끝내 나가는 방식
-  - **비동기(Asynchronous)** 방식 : 해야 할 일을 위임하고 기다리는 방식
-- 리덕스와 연동된 컴포넌트
-- Redux의 상태가 변경될 때마다 Presentaional Component를 다시 렌더링하려면 Container Component로 포함해야 한다. 이렇게 함으로써 Redux에 액션이 dispatch되어 상태가 변경될 때마다 Container Component가 Presentational Component에 다른 prop을 전달할 수 있다.
-- connect() 함수를 통해 생성한다.
-
-
-
-react-redux는 스토어에 저장되어 있는 상태가 변경될 때(dispatch 될 때) 마다 매번 prop을 새로 전달해주는 연결 고리 역할을 한다.
-
-> #### [참고]
+>  [참고]
 >
-> - [Smooth97님의 velog](https://velog.io/@smooth97/-Redux-Presentational-Component-Container-Component)
-> - [React: Presentational VS Container Components](https://flaviocopes.com/react-presentational-vs-container-components/)
->
-> 
+> - https://webdir.tistory.com/349
+> - [flex mdn](https://developer.mozilla.org/ko/docs/Web/CSS/flex)
 
 
 
 
 
+## Function VS Method
 
-
-## 변수 선언
-
-- var  (scope가 함수 단위)
-
-```react
-function foo() {
-  var a = 'hello';
-  if (true) {
-    var a = 'bye';
-    console.log(a); // bye
-  }
-  console.log(a); // bye
-}
-```
-
-- const / let   (블록 단위)
-  - 값을 선언 후 바꿔야 할 땐 let, 바꾸지 않을 땐 const를 사용한다.
-
-```react
-function foo() {
-  let a = 'hello';
-  if (true) {
-    let a = 'bye';
-    console.log(a); // bye
-  }
-  console.log(a); // hello
-}
-```
-
-
-
-- props : 부모 컴포넌트가 자식 컴포넌트에게 주는 값
-- state : 컴포넌트 내부에서 선언하며 내부에서 값을 변경 할 수 있다.
-  - 동적인 데이터를 다룰 때 사용
-
-
-
-
-
-
-
-## 함수 VS 메소드
-
-##### Function (함수)
+###  1. 함수 (Function)
 
 - 독립적으로 존재 -> 로직 처리 이후 사용자가 원하는 결과를 반환한다는 것
 - 함수가 메소드보다 포괄적인 개념
 
-##### Method (메소드) = 메소드를 다른말로 클래스 함수라고도 한다. 
+###  2. 메소드 (Method)
+
+* 메소드를 다른말로 클래스 함수라고도 한다. 
 
 - Class(클래스)/구조체/열거형 내부에 종속되어 존재 -> 해당 클래스에 대한 객체가 생성되어야 사용할 수 있다.
 
@@ -195,24 +96,24 @@ class someClass{
     	//some code 
     } 
 }
-
-출처: https://zeddios.tistory.com/233 [ZeddiOS]
 ```
 
+> [참고]
+>
+> * https://zeddios.tistory.com/233
 
 
 
+## OOP
 
-## 객체 지향 프로그래밍
-
-##### 객체 지향 프로그래밍(Object Oriented Programming   OOP)
+### 객체 지향 프로그래밍(Object Oriented Programming ; OOP)
 
 - 프로그래밍에서 필요한 데이터를 추상화시켜 상태와 행위를 가진 객체를 만들고 그 객체들 간의 유기적인 상호작용을 통해 로직을 구성하는 프로그래밍 방법
   - 객체지향 프로그래밍에서 객체는 **클래스의 인스턴스** 이다.
-  - **클래스**
+  - **클래스 (Class)** 
     - OOP에서 특정 객체를 생성하기 위해 **변수**와 **메소드**를 정의하는 **일종의 틀**이다. 객체를 정의하기 위한 상태(멤버변수)와 메서드(함수)로 구성된다.
     - 어떤 문제를 해결하기 위한 데이터를 만들기 위해 추상화를 거쳐 집단에 속하는 속성(Attribute)과 행위(behavior)를 **변수**와 **메서드**로 정의한 것
-  - **인스턴스**
+  - **인스턴스 (Instance)**
     - 일반적으로 실행 중인 임의의 프로세스, 클래스의 **현재 생성된 오브젝트**를 가리킨다.  예를 들어 청사진(설계도)은 클래스를, 실제 집은 객체를 나타낸다.
     - **클래스에서 정의한 것을 토대로 실제 메모리상에 할당된 것**으로 실제 프로그램에서 사용되는 데이터
 - 장점
@@ -248,9 +149,115 @@ class someClass{
 
 
 
+## Framework VS Library
+
+<img width="390" alt="Framework Library" src="https://user-images.githubusercontent.com/48499094/71968640-ad9cf400-3248-11ea-857e-7343c31dd91b.png">
+
+### 1. 프레임워크 (Framework)
+
+* 프레임워크는 뼈대나 기반구조를 뜻하는데, Application 개발 시 필수적인 코드, 알고리즘, 데이터베이스 연동 등과 같은 기능들을 위해 어느정도 뼈대(구조)를 제공해주는 것
+* 이러한 뼈대 위에 프로그래머가 코드를 작성하여 Application을 완성시켜야 한다. 뼈대를 제공해 주기 때문에 객체 지향 개발을 하면서 일관성 부족 등의 문제를 해결해 준다.
+* 소프트웨어의 특정 문제를 해결하기 위해서 상호 협력하는 클래스와 인터페이스의 집합
+
+### 2. 라이브러리 (Library)
+
+* 라이브러리는 특정 기능에 대한 도구나 함수들을 모은 집합이다. 즉, 프로그래머가 개발하는데 필요한 것들을 모아둔 것
+* 단순 활용이 가능한 도구들의 집합
+
+### 3. 차이점
+
+* 프레임워크와 라이브러리의 차이는 <u>**Flow(흐름)에 대한 제어 권한이 어디에 있느냐의 차이**</u>이다. 
+* 프레임워크는 전체적인 흐름을 자체적으로 가지고 있으며, 프로그래머가 그 안에 필요한 코드를 작성하는 반면에 라이브러리는 사용자가 흐름에 대해 제어를 하며 필요한 상황에 가져다 쓰는 것.
+
+> [참고]
+>
+> * https://mangkyu.tistory.com/4
 
 
-## 화살표 함수
+
+## Process VS Thread
+
+### 1. 프로세스 (Process)
+
+### 2. 스레드 (Thread)
+
+
+
+> [참고]
+>
+> * https://gmlwjd9405.github.io/2018/09/14/process-vs-thread.html
+> * https://brunch.co.kr/@kd4/3
+
+
+
+## SEO
+
+### 검색엔진 최적화(Search Engine Optimization ; SEO)
+
+
+
+## SPA
+
+### 단일 페이지 애플리케이션(Single Page Application ; SPA)
+
+
+
+## SSR VS CSR
+
+### 1. 서버 사이드 렌더링(Server Side Rendering ; SSR)
+
+### 2. 클라이언트 사이드 렌더링(Client Side Rendering ; CSR)
+
+
+
+## JavaScript
+
+### ES6 문법
+
+[참고] [https://velog.io/@godori/ES6-%EC%A0%95%EB%A6%AC-vpjmrh6hhe](https://velog.io/@godori/ES6-정리-vpjmrh6hhe)
+
+#### 1. 변수 선언
+
+- var  (scope가 함수 단위)
+
+```react
+function foo() {
+  var a = 'hello';
+  if (true) {
+    var a = 'bye';
+    console.log(a); // bye
+  }
+  console.log(a); // bye
+}
+```
+
+- const / let   (블록 단위)
+  - 값을 선언 후 바꿔야 할 땐 let, 바꾸지 않을 땐 const를 사용한다.
+
+```react
+function foo() {
+  let a = 'hello';
+  if (true) {
+    let a = 'bye';
+    console.log(a); // bye
+  }
+  console.log(a); // hello
+}
+```
+
+#### 2. Arrow Function
+
+- 화살표 함수는 ES6 문법으로 function 키워드를 사용해서 함수를 만드는 것보다 간단히 함수를 표현할 수 있다. 화살표 함수는 **항상 익명**이다
+
+```javascript
+// 일반 함수
+var foo = function () { console.log("foo") }; // foo
+
+// 화살표 함수
+var bar = () => console.log("bar"); // bar
+```
+
+
 
 JSX 내부에서 조건부 렌더링을 할 때는 보통 삼항 연산자를 사용하거나, AND 연산자를 사용합니다.
 
@@ -276,49 +283,86 @@ function() {
 })()
 ```
 
->  [참고]
+> [참고]
 >
-> * [누구든지 하는 리액트 3편: JSX](https://velopert.com/3626)
->
-> * [화살표 함수의 장점은 무엇일까](https://hanjungv.github.io/2018-02-03-1_JS_arrow_function/)
->
-> * [JavaScript 화살표 함수](https://velog.io/@ki_blank/JavaScript-화살표-함수Arrow-function)
+> - [누구든지 하는 리액트 3편: JSX](https://velopert.com/3626)
+> - [화살표 함수의 장점은 무엇일까](https://hanjungv.github.io/2018-02-03-1_JS_arrow_function/)
+> - [JavaScript 화살표 함수](https://velog.io/@ki_blank/JavaScript-화살표-함수Arrow-function)
 
 
 
+### JavaScript CallBack
+
+#### Promise
+
+- Callback 이 반복되는 단점을 보완하기 위하여 생긴 것
 
 
-
-
-## 프레임워크 VS 라이브러리
-
-
-
-## SEO (Search Engine Optimization)
-
-
-
-## SPA
-
-
-
-## SSR(Server Side Rendering) VS CSR(Client Side Rendering)
-
-
-
-## JavaScript
 
 
 
 ## React
 
+### 1. Props 
+
+- 부모 컴포넌트가 자식 컴포넌트에게 주는 값
+
+### 2. State 
+
+- 컴포넌트 내부에서 선언하며 내부에서 값을 변경 할 수 있다.
+
+- 동적인 데이터를 다룰 때 사용
+
+### 3. Component
+
+#### 1) 컴포넌트 (Component)
+
+- 컴포넌트에 대한 정의는 다양하다.
+- 그 이유는 컴포넌트가 재사용 단위라는 의미로 많이 사용되기 때문이다.
+- 재사용이라는 측면을 넓은 의미로 보면 소프트웨서 개발에 있어서 재사용되는 모든 단위들을 컴포넌트라고 보는 것
+  - 재사용되는 문서
+  - 재사용 모델
+  - 재사용 테이블
+  - 재사용 코드
+  - 재사용 라이브러리 등
+- 컴포넌트의 특징
+  - 1. 컴포넌트는 독립적인 소프트웨어 모듈
+    2. 컴포넌트는 구현, 명세화, 패키지화 그리고 배포될 수 있어야 한다
+    3. 하나의 컴포넌트는 하나 이상의 클래스들로 구성될 수 있다.
+    4. 컴포넌트는 인터페이스를 통해서만 접근할 수 있다.
+
+#### 2) Presentational Component (= Dumb Component)
+
+- 상태를 갖지 않으며 부모로부터 props를 통해 데이터를 전달 받아서 사용한다.
+- 오로지 **시각적인 부분**만 담당한다.
+- 이벤트 핸들러를 등록하는 정도의 기능을 갖추고 있다.
+- **Styled Components**는 모두 Presentaional Component 이다.
+- 데이터나 상태에 관해 알고 있는 것이 거의 없어 결합도가 낮기 때문에 재사용성이 높아진다.
+- 우리가 function, class 를 통해 정의하는 컴포넌트의 대부분은 Presentational Component이다.
+
+#### 3) Container Component (= Smart Component)
+
+- 상태를 갖고 있으며, **비동기 작업(Async)**을 수행하면서 계속적으로 상태가 변경될 수 있다.
+  - **동기(Synchronous)** 방식 : 순차적으로 일을 스스로 끝내 나가는 방식
+  - **비동기(Asynchronous)** 방식 : 해야 할 일을 위임하고 기다리는 방식
+- 리덕스와 연동된 컴포넌트
+- Redux의 상태가 변경될 때마다 Presentaional Component를 다시 렌더링하려면 Container Component로 포함해야 한다. 이렇게 함으로써 Redux에 액션이 dispatch되어 상태가 변경될 때마다 Container Component가 Presentational Component에 다른 prop을 전달할 수 있다.
+- connect() 함수를 통해 생성한다.
 
 
-## React Hook
+
+react-redux는 스토어에 저장되어 있는 상태가 변경될 때(dispatch 될 때) 마다 매번 prop을 새로 전달해주는 연결 고리 역할을 한다.
+
+> #### [참고]
+>
+> - [Smooth97님의 velog](https://velog.io/@smooth97/-Redux-Presentational-Component-Container-Component)
+> - [React: Presentational VS Container Components](https://flaviocopes.com/react-presentational-vs-container-components/)
 
 
 
-## React Router
+### 4. React Hook
+
+### 5. React Router
 
 
 
@@ -352,16 +396,32 @@ function() {
 
 
 
-## ORM (Object Relational Mapping)
+## ORM
+
+### 객체 관계 매핑(Object Relational Mapping ; ORM)
 
 
 
 ## WEBPACK
 
 * bundler
-* 
 
-## REACT BOILERPLATE
+
+
+## BOILERPLATE
+
+보일러플레이트는 프로그래밍에서 <u>**상용구 코드**</u>를 말한다. 
+
+반복되지만 자주쓰이는 형태를 자동화한다는게 보일러플레이트의 핵심
+
+* 최소한의 변경으로 재사용할 수 있는 것
+* 적은 수정만으로 여러 곳에 활용 가능한 코드, 문구
+* 각종 문서에서 반복적으로 인용되는 문서의 한 부분
+
+> [참고]
+>
+> * https://118k.tistory.com/755
+> * https://en.wikipedia.org/wiki/Boilerplate_code
 
 
 
@@ -371,9 +431,13 @@ function() {
 
 ## RDMS
 
+### 관계형 데이터베이스 관리 시스템(Relational Database Management System ; RDMS)
 
 
-## DataBase Connection Pool (DBCP)
+
+## DBCP
+
+### 데이터베이스 커넥션 풀 (DataBase Connection Pool ; DBCP)
 
 #### 1. 커넥션 풀이란?
 
@@ -403,55 +467,6 @@ DB에 연결하기 위해 매번 커넥션 객체를 생성할 때는 많은 시
 >* [커넥션 풀 이란?](https://linked2ev.github.io/spring/2019/08/14/Spring-3-커넥션-풀이란/)
 >
 >* [gusfree.tistory](https://gusfree.tistory.com/1003)
-
-
-
-
-
-## JavaScript CallBack
-
-
-
-### Promise
-
-* Callback 이 반복되는 단점을 보완하기 위하여 생긴 것
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-## React로 사고하기
-
-### 1단계 : UI를 컴포넌트 계층 구조로 나누기
-
-- 모든 컴포넌트의 주변에 박스를 그리고 그 각각에 이름을 붙이는 것
-
-> [참고]
->
-> [리액트로 사고하기](https://ko.reactjs.org/docs/thinking-in-react.html)
-
-
-
-
-
-
-
 
 
 
