--- a/단어 정리.md
+++ b/단어 정리.md
@@ -179,14 +179,35 @@ class someClass{
 
 ### 1. 프로세스 (Process)
 
+![process](https://user-images.githubusercontent.com/48499094/72046411-bc90ae80-32fb-11ea-85a3-d6798a600e96.png)
+
+* 컴퓨터에서 연속적으로 실행되고 있는 컴퓨터 프로그램
+* 메모리에 올라와 실행되고 있는 프로그램의 인스턴스(독립적인 개체)
+* 운영체제로부터 시스템 자원을 할당받는 작업의 단위
+* 동적인 개념으로는 실행된 프로그램을 의미
+
+프로세스는 실행될 때 운영체제로부터 각각 독립된 메모리 영역(Code, Data, Stack, Heap) 을 할당받는다. 기본적으로 하나의 프로세스가 생성되면 하나의 쓰레드가 같이 생성된다. 이를 메인 스레드라고 부르며, 스레드를 추가로 생성하지 않는 한 모든 프로그램 코드는 메인 스레드에서 실행된다.
+
+각 프로세스는 별도의 주소 공간에서 실행되며 한 프로세스는 다른 프로세스의 변수나 자료 구조에 접근할 수 없다. 한 프로세스가 다른 프로세스의 자원에 접근하려면 프로세스 간 통신(IPC, Inter-process Communication)을 사용해야 한다. 예를 들어 파이프, 파일, 소켓 등이 이에 해당한다.
+
+
+
 ### 2. 스레드 (Thread)
 
+![thread](https://user-images.githubusercontent.com/48499094/72046460-c6b2ad00-32fb-11ea-8ea6-34de0b0f7cd8.png)
 
+* 프로세스내에서 실행되는 여러 흐름의 단위
+* 프로세스의 특정한 수행 경로
+* 프로세스가 할당받은 자원을 이용하는 실행의 단위
+
+스레드는 한 프로세스 내에서 동작되는 여러 실행의 흐름으로 프로세스 내에서 각각 Stack만 따로 할당 받고 Code, Data, Heap 영역은 공유한다. 스레드는 한 프로세스 내에서 동작되는 여러 실행의 흐름으로 프로세스 내의 주소 공간이나 자원들을 같은 프로세스 내에 스레드끼리 공유하면서 실행된다. 따라서 한 스레드가 프로세스 자원을 변경하면 다른 이웃 스레드도 그 변경 결과를 즉시 볼 수 있다.
 
 > [참고]
 >
 > * https://gmlwjd9405.github.io/2018/09/14/process-vs-thread.html
 > * https://brunch.co.kr/@kd4/3
+> * https://velog.io/@naljajm/
+> * https://juyoung-1008.tistory.com/47
 
 
 
@@ -194,27 +215,96 @@ class someClass{
 
 ### 검색엔진 최적화(Search Engine Optimization ; SEO)
 
+* 페이지 내에서 제작된 컨텐츠를 공개하며, 사용자가 검색엔진 웹에서 검색어를 입력하면 검색이 잘 될 수 있도록 콘텐츠와 페이지를 최적화시키는 것을 말한다.
+* SEO 작업을 거치고 나면 검색 엔진에 노출될 수 있고, 상위 노출도 기대해 볼 수 있다. 때문에 마케팅 효과를 갖고자 한다면 SEO는 필수로 최적화하는 것이 좋다.
+
+> [참고]
+>
+> * https://musign.net/mugazine/musign-project-sabon
+
 
 
 ## SPA
 
 ### 단일 페이지 애플리케이션(Single Page Application ; SPA)
 
+* 정적파일을 한번에 모두 다운로드받고, 이후 사용자와의 상호작용 가운데 필요한 데이터만 서버에서 (비동기)동적으로 받게 해 트래픽의 총량을 줄이는 애플리케이션 형태.
+* 첫 요청시 딱 한 페이지만 불러오고 페이지 이동시 기존 페이지의 내부를 수정해서 보여주는 방식
+
+* 장점
+  * 자연스러운 사용자 경험 (UX)
+  * 필요한 리소스만 부분적으로 로딩(성능)
+  * 서버의 탬플릿 연산을 클라이언트로 분산(성능)
+  * 컴포넌트별 개발 용이(생산성)
+  * 모바일 앱 개발을 염두에 둔다면 동일한 API를 사용하도록 설계 가능(생산성)
+* 단점
+  * JavaScript 파일을 번들링해서 한 번에 받기 때문에 초기 구동 속도 느림(Webpack의 code splitting으로 해결)
+  * 검색엔진최적화(SEO)가 어려움 (SSR로 해결)
+  * 보안 이슈(프론트엔드에 비즈니스 로직 최소화)
+
+
+
+> [참고]
+>
+> * https://medium.com/aha-official/%EC%95%84%ED%95%98-%ED%94%84%EB%A1%A0%ED%8A%B8-%EA%B0%9C%EB%B0%9C%EA%B8%B0-1-spa%EC%99%80-ssr%EC%9D%98-%EC%9E%A5%EB%8B%A8%EC%A0%90-%EA%B7%B8%EB%A6%AC%EA%B3%A0-nuxt-js-cafdc3ac2053
+> * https://junsday.tistory.com/40
+
 
 
 ## SSR VS CSR
 
+![ssr_and_csr_3](https://user-images.githubusercontent.com/48499094/72049075-92da8600-3301-11ea-8bb6-3c3bdae108ae.png)
+
+
+
+![ssr_and_csr_4](https://user-images.githubusercontent.com/48499094/72049778-f9ac6f00-3302-11ea-9829-b38aeb8a526f.png)
+
+* 렌더링?
+  * 어떠한 웹 페이지 접속시 그 페이지를 화면에 그려주는 것
+
+
+
 ### 1. 서버 사이드 렌더링(Server Side Rendering ; SSR)
 
+![ssr_and_csr_1](https://user-images.githubusercontent.com/48499094/72049263-e8af2e00-3301-11ea-9c60-a27c9b361ee6.png)
+
+* 요청시마다 새로고침이 일어나며 서버에 새로운 페이지에 대한 요청을 하는 방식
+
+
+
 ### 2. 클라이언트 사이드 렌더링(Client Side Rendering ; CSR)
+
+![ssr_and_csr_2](https://user-images.githubusercontent.com/48499094/72049295-fc5a9480-3301-11ea-88df-04b5cf888b8c.png)
+
+* 서버는 단지 JSON 파일만 보내주는 역할을 하며 html을 그리는 역할은 클라이언트 측에서 자바스크립트가 수행한다. 이를 CSR방식이라 한다.
+* 모바일 시대가 도래하면서 모바일 환경에 최적화된 서비스가 필요해졌고 일반적인 컴퓨터에 비해 성능이 낮은 모바일에 최적화시키기 위해선 기존과 다른 방법이 필요했다. 그래서 나온 개념이 SPA이다.
+
+* SEO 문제가 존재한다.
+  * CSR방식으로 이루어진 사이트에서는 View를 생성하기 위해 자바스크립트를 실행시켜야 한다. 하지만 대부분의 웹 크롤러 봇들은 자바스크립트 파일을 실행시키지 못한다. 때문에 HTML 에서만 콘텐츠를 수집하게 되고 CSR페이지를 빈 페이지로 인식하게 된다.
+
+> [참고]
+>
+> * https://valuefactory.tistory.com/700
 
 
 
 ## JavaScript
 
+
+
+> [참고]
+>
+> * https://developer.mozilla.org/ko/docs/Learn/JavaScript/First_steps/What_is_JavaScript
+
+
+
 ### ES6 문법
 
-[참고] [https://velog.io/@godori/ES6-%EC%A0%95%EB%A6%AC-vpjmrh6hhe](https://velog.io/@godori/ES6-정리-vpjmrh6hhe)
+> [참고] 
+>
+> * [https://velog.io/@godori/ES6-%EC%A0%95%EB%A6%AC-vpjmrh6hhe](https://velog.io/@godori/ES6-정리-vpjmrh6hhe)
+
+
 
 #### 1. 변수 선언
 
@@ -303,19 +393,33 @@ function() {
 
 ## React
 
-### 1. Props 
+### React 란
 
-- 부모 컴포넌트가 자식 컴포넌트에게 주는 값
+* 리액트는 페이스북에서 제공해주는 프론트엔드 **라이브러리**이다.
+* 리액트는 컴포넌트 기반으로 되어있어서 컴포넌트에 데이터를 내려주면 개발자가 설계한대로 UI가 만들어져 사용자에게 보여진다.
 
-### 2. State 
+> [참고]
+>
+> * https://reactjs-kr.firebaseapp.com/
+> * [https://velog.io/@stampid/React%EB%9E%80](https://velog.io/@stampid/React란)
+
+### React 특징
+
+#### 1. Props 
+
+- 부모 컴포넌트가 자식 컴포넌트에게 주는 값, 일기 전용 데이터라고 생각하면 된다.
+- 자식 컴포넌트에서는 전달 받은 props를 변경이 불가능하고 props를 전달해준 최상위 부모 컴포넌트만 props를 변경할 수 있다.
+
+#### 2. State 
 
 - 컴포넌트 내부에서 선언하며 내부에서 값을 변경 할 수 있다.
+- 동적인 데이터를 다룰 때 사용. 사용자와의 상호작용을 통해 데이터를 동적으로 변경 해야할 때 사용
+- state는 클래스형 컴포넌트에서만 사용할 수 있는데 각각의 state는 독립적이라 다른 컴포넌트의 직접적인 접근은 불가능하다. 
+- 그러나 자신보다 상위에 있는 state는 변경이 가능한데 state를 변경해주는 함수를 props로 받는다면 state의 변경이 가능하다. 
 
-- 동적인 데이터를 다룰 때 사용
+#### 3. Component
 
-### 3. Component
-
-#### 1) 컴포넌트 (Component)
+##### 1) 컴포넌트 (Component)
 
 - 컴포넌트에 대한 정의는 다양하다.
 - 그 이유는 컴포넌트가 재사용 단위라는 의미로 많이 사용되기 때문이다.
@@ -331,7 +435,7 @@ function() {
     3. 하나의 컴포넌트는 하나 이상의 클래스들로 구성될 수 있다.
     4. 컴포넌트는 인터페이스를 통해서만 접근할 수 있다.
 
-#### 2) Presentational Component (= Dumb Component)
+##### 2) Presentational Component (= Dumb Component)
 
 - 상태를 갖지 않으며 부모로부터 props를 통해 데이터를 전달 받아서 사용한다.
 - 오로지 **시각적인 부분**만 담당한다.
@@ -340,7 +444,7 @@ function() {
 - 데이터나 상태에 관해 알고 있는 것이 거의 없어 결합도가 낮기 때문에 재사용성이 높아진다.
 - 우리가 function, class 를 통해 정의하는 컴포넌트의 대부분은 Presentational Component이다.
 
-#### 3) Container Component (= Smart Component)
+##### 3) Container Component (= Smart Component)
 
 - 상태를 갖고 있으며, **비동기 작업(Async)**을 수행하면서 계속적으로 상태가 변경될 수 있다.
   - **동기(Synchronous)** 방식 : 순차적으로 일을 스스로 끝내 나가는 방식
@@ -360,31 +464,192 @@ react-redux는 스토어에 저장되어 있는 상태가 변경될 때(dispatch
 
 
 
-### 4. React Hook
+#### 4. Virtual DOM
 
-### 5. React Router
+
+
+### React Hook
+
+
+
+> [참고]
+>
+> * https://ko.reactjs.org/docs/hooks-intro.html
+
+### React Router
+
+
 
 
 
 ## Redux
 
-* dispatch
-* action
-* 
+### Redux 란
+
+* React 에 종속된 라이브러리가 아니며 JavaScript의 State를 관리하기 위해 등장한 라이브러리이다.
+
+
+
+### Redux 개념
+
+#### 1. Action (액션)
+
+* Action은 Redux의 State가 어떻게 변할지를 알려주는 인자.
+* Redux에서는 State를 변경할 수 있는 유일한 방법을 store에 action 신호를 보내는 것이라고 규정하고 있다.
+* 액션 객체는 `type` 필드를 필수적으로 가지고 있어야하고 그 외의 값들은 개발자 마음대로 넣어줄 수 있다.
+
+```javascript
+{
+  type: "TOGGLE_VALUE"
+}
+
+/////////////////////////////////////////
+
+{
+  type: "ADD_TODO",
+  payload: {
+    id: 0,
+    text: "리덕스 배우기"
+  }
+}
+
+
+{
+  type: "CHANGE_INPUT",
+  text: "안ㄴ"
+}
+```
+
+
+
+##### Action Creator (액션 생성함수)
+
+* 액션을 만드는 함수.
+* 단순히 파라미터를 받아와서 액션 객체 형태로 만들어준다.
+
+```javascript
+function addTodo(data) {
+  return {
+    type: "ADD_TODO",
+    payload
+  };
+}
+
+// 화살표 함수로도 만들 수 있습니다.
+const changeInput = text => ({ 
+  type: "CHANGE_INPUT",
+  text
+});
+```
+
+
+
+#### 2. Reducer (리듀서)
+
+* 리듀서는 변화를 일으키는 함수이다. 리듀서는 두가지의 파라미터를 받아온다.
+* 첫번째 인자는 `현재의 state` 두번째 인자는 `action` 이다.
+* 전달 받는 파라미터를 참고하여 새로운 상태를 만들어서 반환한다.
+
+```javascript
+function reducer(state, action) {
+  // 상태 업데이트 로직
+  return alteredState;
+}
+```
+
+
+
+#### 3. Store (스토어)
+
+* Redux에서는 한 애플리케이션 당 `하나의 스토어` 를 만들게 된다. 
+* 스토어 안에는, 현재의 앱 상태와, 리듀서가 들어가있고, 추가적으로 몇가지 내장 함수들이 있다.
+
+#### 4. 내장함수
+
+##### 1. Dispatch (디스패치)
+
+* 액션을 발생 시키는 함수라고 생각하면 된다.
+* Dispatch 함수에는 action을 파라미터로 전달한다.  `dispatch(action)`
+* 이런식으로 호출을 하면, 스토어는 리듀서 함수를 실행시켜서 해당 액션을 처리하는 로직이 있다면 액션을 참고하여 새로운 상태(state)를 만들어준다.
+
+##### 2. Subscribe (구독)
+
+* 함수 형태의 값을 파라미터로 받아온다.
+* subscribe 함수에 특정 함수를 전달해주면 액션이 디스패치 되었을 때 마다 전달해준 함수가 호출된다.
+
+##### 3. getState
+
+* 현재 애플리케이션의 state에 접근할 때 사용한다.
+
+> [참고]
+>
+> * [Velopert 님 velog](https://velog.io/@velopert/Redux-1-소개-및-개념정리-zxjlta8ywt)
+> * https://galid1.tistory.com/628
+
+
+
+
 
 ## TypeScript
+
+### TypeScript 란?
+
+**Microsoft**에 의해 개발/관리되고 있는 오픈소스 프로그래밍 언어이다.
+
+대규모 어플리케이션을 개발하는 데 **JavaScript**가 어렵고 불편하다는 불만에 대응하기 위해 개발이 되었다.
+
+TypeScript는 스크립트 언어의 표준인 **ECMA Script (줄여서 ES)** 의 표준을 따르기 때문에 JavaScript영역을 침범하지 않고 최신 ES를 지원한다.
+
+### TypeScript의 특징
+
+- 가장 큰 특징은 Type을 지정하는 것으로 **TypeScript = JavaScript + Type** 으로 볼 수 있다.
+
+  JS에 없는 타입이 지원되면서 장점이 생긴다.
+
+  1. Type이 추가되어 안정성 확보
+  2. Type에 대한 예외 처리를 하지 않아도 된다. (오버헤드 감소)
+  3. JavaScript 엔진의 최적화를 돕는다.
+
+- 컴파일 언어, 정적 타입의 언어이다.
+
+> [참고]
+>
+> * https://typescript-kr.github.io/
+> * [https://velog.io/@dongwon2/TypeScript%EB%A5%BC-%EC%8B%9C%EC%9E%91%ED%95%98%EA%B8%B0-%EC%A0%84%EC%97%90-%EC%9D%B4%EC%A0%95%EB%8F%84%EB%8A%94-%ED%95%B4%EC%A4%98%EC%95%BC%EC%A7%80](https://velog.io/@dongwon2/TypeScript를-시작하기-전에-이정도는-해줘야지)
 
 
 
 ## Node JS
 
+Node js 는 확장성 있는 네트워크 애플리케이션 개발에 사용되는 소프트웨어 플랫폼이다.
+
+
+
+> [참고]
+>
+> * https://ko.wikipedia.org/wiki/Node.js
+> * https://geonlee.tistory.com/92
+
 
 
 ## Express JS
 
+웹 및 모바일 애플리케이션을 위한 일련의 강력한 기능을 제공하는 간결하고 유연한 Node.js 웹 애플리케이션 프레임워크이다.
+
+> [참고]
+>
+> * https://expressjs.com/ko/
+
 
 
 ## Mongo DB
+
+* NoSQL DB
+
+> [참고]
+>
+> * https://velog.io/@ground4ekd/mongodb
+> * https://www.fun-coding.org/mongodb_basic1.html
 
 
 
@@ -392,7 +657,23 @@ react-redux는 스토어에 저장되어 있는 상태가 변경될 때(dispatch
 
 
 
+> [참고]
+>
+> * https://dololak.tistory.com/766
+
+
+
 ## Redux-Saga
+
+Redux-saga는 리액트/리덕스 애플리케이션의 사이드 이펙트, 예를 들어 `데이터 fetching(가지고 온다라는 뜻으로 읽어내기)` 이나 `브라우저 캐시에 접근하는 순수하지 않은 비동기 동작들`을, 더 쉽고 좋게 만드는 것을 목적으로 하는 라이브러리이다.
+
+ 
+
+> [참고]
+>
+> * https://mskims.github.io/redux-saga-in-korean/
+> * https://blog.javarouka.me/2019/04/02/redux-saga-1/
+> * [https://velog.io/@jeonghoheo/Redux-Saga%EC%9D%98-%EA%B8%B0%EB%B3%B8](https://velog.io/@jeonghoheo/Redux-Saga의-기본)
 
 
 
@@ -400,11 +681,26 @@ react-redux는 스토어에 저장되어 있는 상태가 변경될 때(dispatch
 
 ### 객체 관계 매핑(Object Relational Mapping ; ORM)
 
+* 객체와 관계형 데이터베이스의 데이터를 자동으로 매핑(연결) 해주는 것을 말한다.
+
+
+
+> [참고]
+>
+> * https://gmlwjd9405.github.io/2019/02/01/orm.html
+
 
 
 ## WEBPACK
 
+현대 자바스크립트 애플리케이션의 정적 모듈 번들러이다.
+
 * bundler
+  * 소프트웨어 및 일부 하드웨어와 함께 작동하는 데 필요한 모든 것을 포함하는 package
+
+> [참고]
+>
+> * https://nesoy.github.io/articles/2019-02/Webpack
 
 
 
@@ -426,6 +722,15 @@ react-redux는 스토어에 저장되어 있는 상태가 변경될 때(dispatch
 
 
 ## BABEL
+
+* 바벨이란 자바스크립트 컴파일러. 최신 자바스크립트를 표준 자바스크립트로 변환해준다.
+
+> [참고]
+>
+> * https://babeljs.io/
+> * https://brunch.co.kr/@topherlee/29
+> * https://velog.io/@ground4ekd/nodejs-babel
+> * [https://velog.io/@qoik11/Babel-%EC%97%90-%EB%8C%80%ED%95%B4%EC%84%9C-%EC%95%8C%EC%95%84%EB%B3%B4%EC%9E%90](https://velog.io/@qoik11/Babel-에-대해서-알아보자)
 
 
 
