--- a/단어 정리.md
+++ b/단어 정리.md
@@ -478,7 +478,33 @@ react-redux는 스토어에 저장되어 있는 상태가 변경될 때(dispatch
 
 ### React Router
 
+```react
+import React, { Component } from 'react';
+import { Route } from 'react-router-dom';
+import { Home, About } from 'pages';
 
+
+class App extends Component {
+    render() {
+        return (
+            <div>
+                <Route exact path="/" component={Home}/>
+                <Route path="/about" component={About}/>
+            </div>
+        );
+    }
+}
+
+export default App;
+```
+
+> 라우트를 설정 할 때에는 Route 컴포넌트를 사용하고, 경로는 `path` 값으로 설정한다.
+>
+> 첫번째 라우트에 `exact` 가 있는데 이게 붙어 있으면 주어진 경로와 정확히 맞아 떨어져야만 설정한 컴포넌트를 보여준다.
+>
+> #### [참고]
+>
+> * [velopert 님의 블로그](https://velopert.com/3417)
 
 
 
