--- a/JavaScript/FastCampus/기초 정리.md
+++ b/JavaScript/FastCampus/기초 정리.md
@@ -283,7 +283,7 @@ const numbers = [1,2,3,4,5];
 const sum = numbers.reduce((accumulator, current) => accumulator + current, 0);
 console.log(sum);  // 15
 
-
+// index: 각 원소가 몇 번째 아이템인지 알려줌. array: 함수를 실행하고 있는 자기 자신?
 const avg = numbers.reduce((accumulator, current, index, array) => {
   if(index === array.length - 1) {
     return (accumulator + current) / array.length;
@@ -291,5 +291,38 @@ const avg = numbers.reduce((accumulator, current, index, array) => {
   return accumulator + current;
 }, 0);
 console.log(avg);  // 3
+```
+
+
+
+##### 1-28. 배열 내장함수 -reduce 다른 예시
+
+```javascript
+const alphabets = ['a', 'a', 'a', 'b', 'c', 'c', 'd', 'e'];
+const counts = alphabets.reduce((accumulator, current) => {
+  if (accumulator[current]) {
+    accumulator[current] += 1;
+  } else {
+    accumulator[current] = 1;
+  }
+  return accumulator;
+}, {})
+console.log(counts);    // Object {a: 3, b: 1, c: 2, d: 1, e: 1}
+```
+
+
+
+##### 1-29. 배열 내장함수 - 복습과 퀴즈
+
+```javascript
+// 숫자 배열이 주어졌을 때 10보다 큰 숫자의 갯수를
+// 반환하는 함수를 만들기
+function countBiggerThanTen(numbers) {
+  
+}
+
+const count = countBiggerThanTen([1, 2, 3, 4, 5, 10, 20, 30, 40, 50, 60]);
+console.log(count); // 5
+
 ```
 
