문서: Django App 웹 배포.md 수정

--- a/Django/MultiCampus/Note/2019.06.26 - Django App  웹 배포.md
+++ b/Django/MultiCampus/Note/2019.06.26 - Django App  웹 배포.md
@@ -136,10 +136,10 @@
     $ heroku login
     ```
 
-26. heroku appnme 설정  (appname 에 원하는 이름 입력 - 중복불가)
+26. heroku appname 설정  (appname 에 원하는 이름 입력 - 중복불가)
 
     ``` python shell
-    $ heroku crate appname
+    $ heroku create appname
     ```
 
 27. git 에 업로드
@@ -152,15 +152,31 @@
 
 28. MultiCampus 에서는 포트가 막혀 있어 heroku 사이트에서 직접 SECRET_KEY와 DEBUG 등록
 
+* Project -> settings 항목
+* Config Vars 에서 `key` 값과 `value` 값 넣기
+
+* [참고](https://devcenter.heroku.com/articles/config-vars)
+
 29. 배포
 
-    ``` python shell
-    $ git push heroku master
-    ```
+``` python shell
+$ git push heroku master
+```
 
-30. 
+30. heroku에 새로운 DB 생성
 
+```python
+$ heroku run python manage.py migrate
 
+// Agora 프로젝트의 경우 크롤링한 데이터를 넣기 위해 아래와 같이 추가로 입력
+$ heroku run python parser.py
+```
+
+31. admin 계정 생성
+
+```python
+$ heroku run python manage.py createsuperuser
+```
 
 
 
