06/09 : 제어문 md 작성

--- a/JavaScript/2021년 06월 08일 (화).md
+++ b/JavaScript/2021년 06월 08일 (화).md
@@ -112,7 +112,7 @@
 
 
 
-
+[참고] [제어문 (조건문/선택문/반복문)](https://blog.naver.com/ysboo2/221636372498)
 
 * while 문 (반복)  -  실행문을 원하는 횟수만큼 반복하여 실행
 
@@ -184,7 +184,7 @@ The number is 9`
     <p id="test"></p>
 
     <script>
-      var text = ""
+      var text = "";
       var i = 0;
 
       do {
