06/24 dom 내용 추가

--- a/JavaScript/2021년 06월 22일 (화) - DOM.md
+++ b/JavaScript/2021년 06월 22일 (화) - DOM.md
@@ -352,7 +352,7 @@
 </html>
 ```
 
-* `document.querySelector`
+* `document.querySelector` - 지정한 요소 중 첫번째 요소만 선택
 
 ```html
 <!DOCTYPE html>
@@ -419,4 +419,36 @@
   </body>
 </html>
 ```
+
+* `document.createElement()`  - 지정한 `tagName`의 html 요소를 만들어 반환한다.
+
+Syntax : `let element = document.createElement(tagName[, options]);`
+
+* `document.createTextNode()` - 텍스트 노드를 생성
+
+Syntax : `var text = docuemnt.createTextNode("내용");`
+
+* `Node.appendChild()` - 한 노드를 특정 부모 노드의 자식 노드 리스트 중 마지막 자식으로 붙인다.
+
+Syntax : `부모요소.appendChild(자식요소)`
+
+```html
+<!DOCTYPE html>
+<html>
+  <body>
+    <p>버튼을 클릭하면 BUTTON 요소를 생성합니다.</p>
+    <button onclick="myFunction()">클릭</button>
+    <script>
+      function myFunction() {
+        var btn = document.createElement("BUTTON");
+        var t = document.createTextNode("안녕하세요");
+        btn.appendChild(t);
+        document.body.appendChild(btn);
+      }
+    </script>
+  </body>
+</html>
+```
+
+
 
