06/25 js - dom 문서 수정

--- a/JavaScript/2021년 06월 22일 (화) - DOM.md
+++ b/JavaScript/2021년 06월 22일 (화) - DOM.md
@@ -66,7 +66,9 @@
 
 #### 문서 객체 모델 (DOM)
 
-* (x)html 문서의 구조를 가리켜 문서 객체 모델(DOM : Document Object Model)이라고 한다.
+* **(x)html 문서의 구조**를 가리켜 **문서 객체 모델(DOM : Document Object Model)**이라고 한다.
+
+* (x)html 문서의 기본 구조는 최상위 객체로 `<html>`이 있고 그 하위 객체로 `<head>`와 `<body>`가 있다. 
 
 * (x)html 각 태그마다 기능과 속성이 있다. 
 
